# ds_project_template

./: cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.pypi_package_name}}/: .gitignore  .pre-commit-config.yaml  pyproject.toml
