[project]
name = "{{cookiecutter.pypi_package_name}}"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
  {name = "{{ cookiecutter.full_name | replace('\\', '\\\\') | replace('\"', '\\\"') }}", email = "{{cookiecutter.email}}"}
]
requires-python = ">= 3.12"

dependencies = [
  "pandas",
]

[project.optional-dependencies]
dev = [
  "pre-commit",
  "ruff",
  "pytest",
]
notebooks = [
  "jupyter",
  "ipykernel",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
include = ["*.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
